--- a/fontend/package.json
+++ b/fontend/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^11.10.0",
     "google-auth-library": "^9.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
