--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "path-to-regexp": "6.2.1"
   }
 }
