--- a/fontend/package.json
+++ b/fontend/package.json
@@ -27,6 +27,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.0.5"
   },
