--- a/fontend/package.json
+++ b/fontend/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
