--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "path-to-regexp": "^6.3.0",
+    "resend": "^5.0.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
