--- a/fontend/package.json
+++ b/fontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
     "google-auth-library": "^9.4.0",
@@ -25,14 +26,17 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
+    "recharts": "^3.1.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
