--- a/fontend/package.json
+++ b/fontend/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.1.2",
