--- a/fontend/package.json
+++ b/fontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.3.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.1.2",
     "socket.io": "^4.8.1",
