fixing subscription cancellationa and upgrade

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,5 @@ PORT=10000
 MONGO_URI=mongodb+srv://ecommercemongodb:ecommercemongodb@cluster0.fqfbgjf.mongodb.net/e-commerce
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
+PAYHERE_APP_SECRET=8cJlAdroxID8n0No30NAwT8m22kmMKNW98cJlqgSYpMa
+PAYHERE_APP_ID=4OVxzVJAbSK4JFnJjJNzoH3TV
