--- a/fontend/package.json
+++ b/fontend/package.json
@@ -24,7 +24,9 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.12",
     "google-auth-library": "^9.4.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
